# AxiomX

./: CMakeLists.txt  circle.h  core.h  geoobject.h  geoscene.h  geoview.h  graphicsline.h  graphicsobject.h  graphicspoint.h  interactionmanager.h  line.cpp  line.h  linetool.h  main.cpp  mainwindow.cpp  mainwindow.h  movetool.h  observer.h  point.h  pointonline.h  pointtool.h  scenecontroller.h  tool.h  view.h
src/: allincludes.h  main.cpp  mainwindow.cpp  mainwindow.h
src/command/: command.h  commandmanager.cpp  commandmanager.h  createcirclecommand.cpp  createcirclecommand.h  createlinecommand.cpp  createlinecommand.h  createpointcommand.cpp  createpointcommand.h  movepointcommand.cpp  movepointcommand.h  resultcommand.h
src/control/: control.h  interactionmanager.cpp  interactionmanager.h  scenecontroller.cpp  scenecontroller.h  selectionmanager.cpp  selectionmanager.h  snapmanager.cpp  snapmanager.h
src/core/: circle.cpp  circle.h  core.h  enums.h  geoobject.cpp  geoobject.h  infinitelineitem.cpp  infinitelineitem.h  line.cpp  line.h  point.cpp  point.h  structs.h  utility.cpp  utility.h
src/tools/: circletool.cpp  circletool.h  intersectiontool.cpp  intersectiontool.h  linetool.cpp  linetool.h  movetool.cpp  movetool.h  perpendiculartool.cpp  perpendiculartool.h  pointtool.cpp  pointtool.h  selecttool.cpp  selecttool.h  tool.cpp  tool.h  tools.h
src/view/: geoview.cpp  geoview.h  graphicscircle.cpp  graphicscircle.h  graphicsline.cpp  graphicsline.h  graphicsobject.cpp  graphicsobject.h  graphicspoint.cpp  graphicspoint.h  grid.cpp  grid.h  observer.h  view.h
